# models/Post.go
@@ -1,13 +1,22 @@
 package models
 
-import "time"
+import (
+	"time"
+)
 
 type Post struct {
 	PostID      int64     `json:"post_id" db:"post_id"`
-	AuthorId    int64     `json:"author_id" db:"author_id"`
-	CommunityID int64     `json:"community_id" db:"community_id"`
+	AuthorID    int64     `json:"author_id" db:"author_id"`
+	CommunityID int64     `json:"community_id" db:"community_id" binding:"required"`
 	Status      int32     `json:"status" db:"status"`
-	Title       string    `json:"title" db:"title"`
-	Content     string    `json:"content" db:"content"`
-	CreateTime  time.Time `json:"-" db:"create_time"`
+	Title       string    `json:"title" db:"title" binding:"required"`
+	Content     string    `json:"content" db:"content" binding:"required"`
+	CreateTime  time.Time `json:"create_time" db:"create_time"`
+}
+
+// ApiPostDetail 帖子详情接口的结构体
+type ApiPostDetail struct {
+	AuthorName       string             `json:"author_name"`
+	*Post                               // 嵌入帖子结构体
+	*CommunityDetail `json:"community"` // 嵌入社区信息
 }
